welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:26: error: type mismatch;
 found   : String
 required: Int
    var cpt:Int=litMessage()
                          ^Array2:44: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.Array2'
override def run() {
             ^